Migrating CreatePostHandler to return a Promise
